package model;

public class Json {

}
