package model;

public class OperatingSystem {

	private String os;
	
}
