@startuml aids

skinparam monochrome true

de.thowl.aids.cli.Main -- de.thowl.aids.gui.Gui
de.thowl.aids.cli.Main -- de.thowl.aids.core.Latex
de.thowl.aids.gui.MainScene -- de.thowl.aids.core.Json
de.thowl.aids.gui.LatexScene -- de.thowl.aids.core.Json

package de.thowl.aids.cli {
	class Main {
		- {static} logger: Logger
		- {static} type: String
		- {static} destination: String
		- {static} amount: int
		- {static} chapters: int
		- {static} shuffle: boolean;
		+ {static} main(String[]: args): void
		- {static} formatArg(String: arg): String
		- {static} handleArgs(String[]: args): void
		- {static} handleParamArgs(String: arg, String: prevArg): void
		- {static} checkInt(String: inputInt): int
		- {static} printVersion(): void
		- {static} printHelp(): void
	}
}

package de.thowl.aids.core {
	class Latex {
		- logger: Logger
		- header: LatexSnippet
		- snippets: ArrayList<LatexSnippet>
		- footer: LatexSnippet
		+ gatherSnippets(type: String, chapters: int, randomise: boolean): void
		+ concat(type: String, destination: String): void
		+ compile(type: String, workingDir: String): void
		- copyPdf(sourceDir: String, fileName: String, destinationDir: String, newFileName: String): void
		+ generate(type: String, destination: String, amount: int, chapters: int, shuffle: boolean): void
	}

	Latex o-- LatexSnippet 
	Latex -- OperatingSystem
	Latex -- Json
	Latex -- LatexNotInstalledException

	class OperatingSystem {
		- operatingSystem: String
		- homeDir: String
		- pdflatexPath: String
	}

	class Json {
		- filePath: String
		- jsonObject: JSONObject
		+ Json(filepath: String)
		+ getValue(object: String, key: String): String
		+ setValue(object: String, key: String, value: String): void
	}

	class LatexNotInstalledException {
		- serialVersionUID: long
		- message: String
		+ LatexNotInstalledException(message: String)
		+ toString(): String
	}

	class LatexSnippet {
		- file: File
		- filePath: String
		- fileContent: String
	}

}

note top of de.thowl.aids.gui : Module in theory optional.
package de.thowl.aids.gui {
	class Gui {
		+ start(stage: Stage): void throws Exception
	}

	note "Gui loads an FXML, which uses one off these as a Controller" as N1
	Gui .. N1
	N1 ..> de.thowl.aids.gui.MainScene
	N1 ..> de.thowl.aids.gui.LatexScene
	N1 ..> de.thowl.aids.gui.DatabaseScene

	class MasterController implements Initializable{
	        - Button btnMainScene;
	        - Button btnLatexScene;
	        - Button btnDatabaseScene;
	        # cmbType: ComboBox<String>
	        # showErrorAlert(String: header, String: text, Exception: exception): void
	        # switchToScene(ActionEvent: event, String: name): void
	        # initialiseTypeDropdown(): void
	        # validateInt(String: inputInt): int
	        - btnMainSceneClick(ActionEvent: event): void
	        - btnLatexSceneClick(ActionEvent: event): void
	        - btnDatabaseSceneClick(ActionEvent: event): void
	        + initialize(URL: location, ResourceBundle: resources): void
	}

	class MainScene extends MasterController {
	        - txtAmount: TextField
	        - txtChapters: TextField
	        - txtFileName: TextField
	        - chkShuffle: CheckBox
	        - btnGenerateDocument: Button
	        - btnOpenEditor: Button
	        - txtMultipurposeTextArea: TextArea
	        - appendToTextArea(String newString): void
	        - btnGenerateDocumentClick(ActionEvent: event): void
	        + initialize(URL: location, ResourceBundle: resources): void
	}

	class LatexScene extends MasterController {
	        - logger: Logger
	        - latexdir: String
	        - settingsFile: String
	        - treeFileTree: TreeView<String>
	        - txtFileName: TextField
	        - btnOpenEditor: Button
	        + getSelectedTree(TreeItem<String>: item): String
	        + initialize(URL: location, ResourceBundle: resources): void
	        - createTreeItem(File: file): TreeItem<String>
	        - expandItem(TreeItem<String>: item): void
	        - populateTreeView(String: directory): void
	        - cmbTypeSelection(ActionEvent event): void
	        - btnOpenEditorClick(ActionEvent event): void
      	}

        class DatabaseScene extends MasterController {
	        - btnImportDatabase: Button
	        - btnExportDatabase: Button
	        - btnImportDatabase(ActionEvent event): void
	        - btnExportDatabase(ActionEvent event): void
	}

        Initializable <|-- MasterController : overrides
        MasterController <|-- MainScene : overrides
        MasterController <|-- LatexScene : overrides
        
}

package de.thowl.aids.database {
        class MySQL{
				- counter: int
                - url: String
                - userName: String
                - password: String
                - con: Connection
                + openConnection: void
                + closeConnection: void
                + getSubjekt: String
                + setSubjekt: String
				        + snippetVerarbeitung: void
				        + exportToCSV: void
				        + importCSVData: void
				        + CSVPortDesision: String
        }
}

@enduml
